doc: fix color contrast on <kbd> elements
PR-URL: https://github.com/nodejs/node/pull/37185

--- a/doc/api_assets/style.css
+++ b/doc/api_assets/style.css
@@ -633,7 +633,7 @@ kbd {
   border-radius: 3px;
   border: 1px solid #b4b4b4;
   box-shadow: 0 1px 1px rgba(0, 0, 0, .2);
-  color: var(--color-text-primary);
+  color: #333;
   display: inline-block;
   font-size: .85em;
   font-weight: 700;
